# fude

./: .gitignore  Makefile  README.en.md  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  vitest.config.js
.github/workflows/: build.yml
docker/: Dockerfile  entrypoint.sh
docs/: AI_COPILOT_DESIGN.md  DESIGN.md  DOCKER.md  PRINT.md
docs/design/: FILES_NAVBAR_IMPROVEMENTS.md  TABLE_TOOLS.md
scripts/: fude-browser  fude-remote  serve.js  verify-plantuml-engine.mjs
src/: index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: postinst.sh  prerm.sh
src-tauri/src/: file_watcher.rs  key_storage.rs  lib.rs  main.rs
src/js/: app.js  backend.js  file-save-picker.js  folder-picker.js  help.js  settings.js
src/js/__tests__/: ai-copilot-focus.test.js  autosave.test.js  backend.test.js  chat-apply.test.js  code-highlight.test.js  editor-commands.test.js  editor-flash.test.js  editor-list.test.js  editor-reload.test.js  editor-scroll.test.js  emacs-binding.test.js  file-lang.test.js  file-save-picker.test.js  folder-picker.test.js  hash.test.js  help.test.js  image-insert.test.js  keymode.test.js  line-diff.test.js  link-target.test.js  list-nav.test.js  menubar.test.js  mermaid-adapter.test.js  model-picker-filter.test.js  model-store.test.js  open-shortcuts.test.js  outline.test.js  panes.test.js  pathnorm.test.js  plantuml-adapter.test.js  plantuml-includes.test.js  preview-code-highlight.test.js  preview-file-link.test.js  print.test.js  (+19 more)
(+51 files in other folders)
