[package]
name = "fude"
version = "0.1.3"
description = "Fude - A lightweight cross-platform Markdown editor built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "fude_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "s"
